# officerworker

./: makefile  officer.sh  readme.md  worker.sh
code/: CMakeLists.txt  mrcvFrom.c  msendTo.c  msgQ.h  msgdel.c
