CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(msgQueue)

SET(DIR_PREFIX /AstroTools/Toolbox)

#SET(LIB_SRC getMsgID.c getArgs.c)
ADD_EXECUTABLE(mrcvFrom mrcvFrom.c)
ADD_EXECUTABLE(msendTo msendTo.c)
ADD_EXECUTABLE(msgdel msgdel.c)

TARGET_LINK_LIBRARIES(mrcvFrom optparse )
TARGET_LINK_LIBRARIES(msendTo optparse )
TARGET_LINK_LIBRARIES(msgdel optparse )

SET(CMAKE_INSTALL_PREFIX ${DIR_PREFIX})
INSTALL(TARGETS mrcvFrom RUNTIME DESTINATION bin)
INSTALL(TARGETS msendTo RUNTIME DESTINATION bin)
INSTALL(TARGETS msgdel RUNTIME DESTINATION bin)
